--- a/client/src/Components/Splash/styles.css
+++ b/client/src/Components/Splash/styles.css
@@ -54,3 +54,45 @@ section {
 .btn-primary {
   background-color: #004FAF;
 }
+@media only screen and (max-width: 599px) {
+  /* Tablet-Lanscape */
+  .header {
+    width: 100vw;
+  }
+  .header h1 {
+    font-size: 2rem;
+  }
+  .container {
+    padding: 1rem 1.5rem;
+  
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  /* Tablet-Portrait */
+  .header {
+    width: 100vw;
+  }
+  .header h1 {
+    font-size: 2.5rem;
+  }
+  .container {
+    padding: 1rem 2.5rem;
+  
+  }
+}
+
+@media only screen and (min-width: 900px) {
+  /* Tablet-Lanscape */
+
+}
+
+@media only screen and (min-width: 1200px) {
+  /* Desktop */
+ 
+}
+
+@media only screen and (min-width: 1800px) {
+  /* Big Desktop */
+  
+}
