--- a/client/src/Components/Card/styles.css
+++ b/client/src/Components/Card/styles.css
@@ -27,3 +27,36 @@
   color: #2C2C2B;
 
 }
+
+@media only screen and (max-width: 599px) {
+  /* Tablet-Lanscape */
+  .card-header h3 {
+    font-size: 1.5rem;
+  }
+  .card .card-body {
+    padding: 0rem 2.5rem 1.5rem;
+    color: #2C2C2B;
+  }
+  .card .card-header {
+    padding: 0rem 2.5rem 1.5rem;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  /* Tablet-Portrait */
+
+}
+
+@media only screen and (min-width: 900px) {
+  /* Tablet-Lanscape */
+}
+
+@media only screen and (min-width: 1200px) {
+  /* Desktop */
+
+}
+
+@media only screen and (min-width: 1800px) {
+  /* Big Desktop */
+
+}
