--- a/client/src/Components/Card/styles.css
+++ b/client/src/Components/Card/styles.css
@@ -38,25 +38,50 @@
     color: #2C2C2B;
   }
   .card .card-header {
-    padding: 0rem 2.5rem 1.5rem;
+    padding: 1.5rem 2.5rem;
   }
 }
 
 @media only screen and (min-width: 600px) {
   /* Tablet-Portrait */
-
+  .card .card-body {
+    padding: 0rem 2.5rem 1.5rem;
+    color: #2C2C2B;
+  }
+  .card .card-header {
+    padding: 1.5rem 2.5rem;
+  }
 }
 
 @media only screen and (min-width: 900px) {
   /* Tablet-Lanscape */
+  .card .card-body {
+    padding: 0rem 3rem 1.5rem;
+    color: #2C2C2B;
+  }
+  .card .card-header {
+    padding: 1.5rem 3rem;
+  }
 }
 
 @media only screen and (min-width: 1200px) {
   /* Desktop */
-
+  .card .card-body {
+    padding: 0rem 3rem 1.5rem;
+    color: #2C2C2B;
+  }
+  .card .card-header {
+  padding: 1.5rem 3rem;
+  }
 }
 
 @media only screen and (min-width: 1800px) {
   /* Big Desktop */
-
+  .card .card-body {
+    padding: 0rem 3rem 1.5rem;
+    color: #2C2C2B;
+  }
+  .card .card-header {
+    padding: 1.5rem 3rem;
+  }
 }
