--- a/client/src/Components/Splash/styles.css
+++ b/client/src/Components/Splash/styles.css
@@ -57,7 +57,7 @@ section {
 @media only screen and (max-width: 599px) {
   /* Tablet-Lanscape */
   .header {
-    width: 100vw;
+    width: initial;
   }
   .header h1 {
     font-size: 2rem;
@@ -71,7 +71,7 @@ section {
 @media only screen and (min-width: 600px) {
   /* Tablet-Portrait */
   .header {
-    width: 100vw;
+    width: initial;
   }
   .header h1 {
     font-size: 2.5rem;
@@ -84,15 +84,21 @@ section {
 
 @media only screen and (min-width: 900px) {
   /* Tablet-Lanscape */
-
+  .header {
+    width: 50vw;
+  }
 }
 
 @media only screen and (min-width: 1200px) {
   /* Desktop */
- 
+  .header {
+    width: 50vw;
+  }
 }
 
 @media only screen and (min-width: 1800px) {
   /* Big Desktop */
-  
+  .header {
+    width: 50vw;
+  }
 }
