--- a/client/src/Components/Stats/styles.css
+++ b/client/src/Components/Stats/styles.css
@@ -54,7 +54,7 @@
   /* Tablet-Portrait */
 
   .stats-wrapper {
-    flex-direction: column;
+    flex-direction: row;
   }
   .stat {
     justify-content: flex-start;
@@ -62,6 +62,12 @@
   }
   .stat-line {
     justify-content: flex-start
+  }
+  .stat-value { 
+    font-size: 1rem;
+  }
+  .fa-3x {
+    font-size: 2rem;
   }
 }
 
@@ -96,6 +102,9 @@
   .stats-wrapper {
     flex-direction: row;
   }
+  .stat-value {
+    font-size: 1.5rem;
+  }
 }
 
 @media only screen and (min-width: 1800px) {
@@ -105,10 +114,14 @@
   }
   .stats-wrapper {
     flex-direction: row;
+    padding: 0rem 20rem;
   }
   .stat {
     flex-direction: column;
     justify-content: center;
     text-align: center;
+  }
+  .stat-value {
+    font-size: 1.5rem;
   }
 }
